--- a/src/app/pages/job-details/job-details.page.html
+++ b/src/app/pages/job-details/job-details.page.html
@@ -1,9 +1,25 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>jobDetails</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>>
+    </ion-buttons>
+    <ion-title>{{ job.title }}</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-item>
+    <ion-label position="stacked">Name</ion-label>
+    <ion-textarea [(ngModel)]="job.location" rows="8"></ion-textarea>
+  </ion-item>
 </ion-content>
+
+<ion-footer *ngIf="!job.id">
+  <ion-toolbar color="success">
+    <ion-button expand="full" fill="clear" color="light" (click)="addJob()">
+      <ion-icon name="checkmark" slot="start"></ion-icon>
+      Add Job
+    </ion-button>
+  </ion-toolbar>
+</ion-footer>
+
