--- a/src/app/pages/job-details/job-details.page.html
+++ b/src/app/pages/job-details/job-details.page.html
@@ -10,7 +10,7 @@
 <ion-content>
   <ion-item>
     <ion-label position="stacked">Name</ion-label>
-    <ion-textarea [(ngModel)]="job.location" rows="8"></ion-textarea>
+    <ion-textarea [(ngModel)]="job.title" rows="8"></ion-textarea>
   </ion-item>
 </ion-content>
 
@@ -27,7 +27,14 @@
   <ion-row no-padding text-center>
     <ion-col size="6">
       <ion-button expand="block" fill="outline" color="danger" (click)="deleteJob()">
-
+        <ion-icon name="trash" slot="start"></ion-icon>
+        Delete
+      </ion-button>
+    </ion-col>
+    <ion-col size="6">
+      <ion-button expand="block" fill="solid" color="success" (click)="updateJob()">
+        <ion-icon name="save" slot="start"></ion-icon>
+        Update
       </ion-button>
     </ion-col>
   </ion-row>
