--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      Job Listing
+      Job Listings
     </ion-title>
   </ion-toolbar>
 </ion-header>
