--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -15,7 +15,21 @@
 
   <ion-list>
     <ion-item *ngFor="let job of (jobs | async)" [routerLink]="['/job', job.id]">
-      {{ job.title }}
+      <ion-grid>
+        <ion-row>
+          <h3><strong>{{ job.title }}</strong></h3>
+        </ion-row>
+        <ion-row>
+          <p>Location: {{ job.location }}</p>
+        </ion-row>
+        <ion-row>
+          <p>Industry: {{ job.industry }}</p>
+        </ion-row>
+        <ion-row>
+          <p>Salary: {{ job.salary }}</p>
+        </ion-row>
+      </ion-grid>
+      <ion-icon name="information-circle" item-right></ion-icon>
     </ion-item>
   </ion-list>
 
