--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,11 +7,13 @@
 </ion-header>
 
 <ion-content>
+  <!-- Don't need a fab on this page now
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button routerLink="/job">
       <ion-icon name="add"></ion-icon>
     </ion-fab-button>
   </ion-fab>
+  -->
 
   <ion-list>
     <ion-item *ngFor="let job of (jobs | async)" [routerLink]="['/job', job.id]">
