Tried adding apply page, added search bar to job search page, and changed icon on apply button in job-details

--- a/src/app/pages/job-details/job-details.page.html
+++ b/src/app/pages/job-details/job-details.page.html
@@ -43,7 +43,7 @@
   <ion-row no-padding text-center>
     <ion-col>
       <ion-button expand="block" fill="solid" color="success" (click)="applyForJob()">
-        <ion-icon name="save" slot="start"></ion-icon>
+        <ion-icon name="add-circle-outline" slot="start"></ion-icon>
         Apply
       </ion-button>
     </ion-col>
