--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      Job Listings
+      Job Search
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -14,6 +14,8 @@
     </ion-fab-button>
   </ion-fab>
   -->
+
+  <ion-searchbar></ion-searchbar>
 
   <ion-list>
     <ion-item *ngFor="let job of (jobs | async)" [routerLink]="['/job', job.id]">
