Added some content to the profile tab

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -6,4 +6,32 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content></ion-content>
+<ion-content>
+
+  <ion-list>
+    <ion-item>
+      <ion-label>Name:</ion-label>
+      Jonny Ramen
+    </ion-item>
+    <ion-item>
+      <ion-label>Country:</ion-label>
+      <ion-select multiple="true">
+        <ion-select-option value="japan">Japan</ion-select-option>
+        <ion-select-option value="usa">United States of America</ion-select-option>
+        <ion-select-option value="australia">Australia</ion-select-option>
+        <ion-select-option value="mexico">Mexico</ion-select-option>
+      </ion-select>
+    </ion-item>
+    <ion-item>
+      <ion-label>Industry:</ion-label>
+      <ion-select multiple="true">
+        <ion-select-option value="education">Education</ion-select-option>
+        <ion-select-option value="teaching">Teaching</ion-select-option>
+        <ion-select-option value="information-technology">Information Technology</ion-select-option>
+        <ion-select-option value="media">Media</ion-select-option>
+      </ion-select>
+
+    </ion-item>
+  </ion-list>
+
+</ion-content>
