Added cordova-android-support-gradle-release, added description to Job interface, and added description field to job-details.page

--- a/src/app/pages/job-details/job-details.page.html
+++ b/src/app/pages/job-details/job-details.page.html
@@ -28,6 +28,10 @@
     <ion-label position="stacked">Salary</ion-label>
     {{ job.salary }}
   </ion-item>
+  <ion-item>
+    <ion-label position="stacked">Description</ion-label>
+    {{ job.description }}
+  </ion-item>
 </ion-content>
 
 <ion-footer *ngIf="!job.id">
