--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content>
+
   <!-- Don't need a fab on this page now
   <ion-fab vertical="bottom" horizontal="end" slot="fixed">
     <ion-fab-button routerLink="/job">
@@ -15,7 +16,9 @@
   </ion-fab>
   -->
 
-  <ion-searchbar></ion-searchbar>
+  <ion-toolbar>
+    <ion-searchbar placeholder="Search Listings" [(ngModel)]="queryText" (ionInput)="updateJobs()"></ion-searchbar>
+  </ion-toolbar>
 
   <ion-list>
     <ion-item *ngFor="let job of (jobs | async)" [routerLink]="['/job', job.id]">
