--- a/src/app/pages/apply/apply.page.html
+++ b/src/app/pages/apply/apply.page.html
@@ -1,9 +1,12 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>apply</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Apply</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+  You are applying for {{ job.title }}
 </ion-content>
