--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -5,15 +5,5 @@
 </ion-header>
 
 <ion-content>
-  <div *ngIf="isUserLoggedIn" style="text-align:center">
-    <img src="{{userInfo.picture.data.url}}">
-    <h3>{{userInfo.first_name}}</h3>
-    <p>{{userInfo.email}}</p>
-    <button ion-button clear (click)="logoutWithFB()">Logout</button>
-  </div>
-
+  Hello world
 </ion-content>
-
-<ion-footer *ngIf="!isUserLoggedIn">
-  <button ion-button block (click)="loginWithFB()">Login with Facebook</button>
-</ion-footer>
