Allowed a backtrack from the "Edit Resume" page

--- a/src/app/pages/resume/resume.page.html
+++ b/src/app/pages/resume/resume.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>resume</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="/"></ion-back-button>
+    </ion-buttons>
+    <ion-title>Edit Resume</ion-title>
   </ion-toolbar>
 </ion-header>
 
