--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -33,7 +33,7 @@
       <ion-card-title>My Resumes</ion-card-title>
     </ion-card-header>
     <ion-list>
-      <ion-item>Resume 1</ion-item>
+      <ion-item [routerLink]="['/resume']">Resume 1</ion-item>
       <ion-item>Resume 2</ion-item>
       <ion-item>Resume 3</ion-item>
     </ion-list>
