Added some fields from gaijinpot profile

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -18,6 +18,21 @@
       <ion-input placeholder="ナマエ"></ion-input>
     </ion-item>
     <ion-item>
+      <ion-label>Age</ion-label>26
+    </ion-item>
+    <ion-item>
+      <ion-label>Birth Date</ion-label>Sample date
+    </ion-item>
+    <ion-item>
+      <ion-label>Gender</ion-label>Male
+    </ion-item>
+    <ion-item>
+      <ion-label>City of Residence</ion-label>Tokyo
+    </ion-item>
+    <ion-item>
+      <ion-label>Birth Date</ion-label>Sample date
+    </ion-item>
+    <ion-item>
       <ion-label>Industry:</ion-label>
       <ion-select multiple="true">
         <ion-select-option value="education">Education</ion-select-option>
