Added appropriate fields to profile tab

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -30,7 +30,25 @@
       <ion-label>City of Residence</ion-label>Tokyo
     </ion-item>
     <ion-item>
-      <ion-label>Birth Date</ion-label>Sample date
+      <ion-label>最寄り駅</ion-label>Closest Station
+    </ion-item>
+    <ion-item>
+      <ion-label>Country of Citizenship</ion-label>USA
+    </ion-item>
+    <ion-item>
+      <ion-label>Email Address</ion-label>Emeru
+    </ion-item>
+    <ion-item>
+      <ion-label>Visa Status</ion-label>ESHIS
+    </ion-item>
+    <ion-item>
+      <ion-label>Japanese Driver's License</ion-label>N
+    </ion-item>
+    <ion-item>
+      <ion-label>Final Education</ion-label>Gakushi
+    </ion-item>
+    <ion-item>
+      <ion-label>Desired Start Date</ion-label>ASAP
     </ion-item>
     <ion-item>
       <ion-label>Industry:</ion-label>
