Removed data from the resume list

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -76,14 +76,10 @@
     <ion-card-header>
       <ion-card-title>My Resumes</ion-card-title>
     </ion-card-header>
-    <ion-item>Sample Resume</ion-item>
     <ion-item *ngFor="let resume of (resumes | async)" [routerLink]="['/resume', resume.id]">
       <ion-grid>
         <ion-row>
-          <h3><strong>{{ resume.title }}</strong></h3>
-        </ion-row>
-        <ion-row>
-          <p>Career Objectives: {{ resume.careerObjectives }}</p>
+          {{ resume.title }}
         </ion-row>
       </ion-grid>
     </ion-item>
