Added id to routing module to fix no page opening on click

--- a/src/app/pages/resume/resume.page.html
+++ b/src/app/pages/resume/resume.page.html
@@ -8,6 +8,7 @@
 </ion-header>
 
 <ion-content>
+  <p>Welcome to the Resume page</p>
   <ion-list>
     <ion-item *ngFor="let resume of (resumes | async)">
       <ion-grid>
