--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -82,6 +82,7 @@
           {{ resume.title }}
         </ion-row>
       </ion-grid>
+      <ion-icon name="create" item-right></ion-icon>
     </ion-item>
   </ion-card>
 
