Updated work history to be an item like the rest

--- a/src/app/pages/resume/resume.page.html
+++ b/src/app/pages/resume/resume.page.html
@@ -29,8 +29,8 @@
     <ion-label position="stacked">Educational History</ion-label>
     {{ resume.educationalHistory }}
   </ion-item>
-  <ion-input>
+  <ion-item>
     <ion-label position="stacked">Work History</ion-label>
     {{ resume.workHistory }}
-  </ion-input>
+  </ion-item>
 </ion-content>
