--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,19 +1,10 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Facebook Login</ion-title>
+    <ion-title>Home Page</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <div *ngIf="isUserLoggedIn" style="text-align:center">
-    <img src="{{userInfo.picture.data.url}}">
-    <h3>{{userInfo.first_name}}</h3>
-    <p>{{userInfo.email}}</p>
-    <button ion-button clear (click)="logoutWithFB()">Logout</button>
-  </div>
-
+<ion-content padding>
+  <h1>Hello, World!</h1>
 </ion-content>
 
-<ion-footer *ngIf="!isUserLoggedIn">
-  <button ion-button block (click)="loginWithFB()">Login with Facebook</button>
-</ion-footer>
