--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -76,13 +76,19 @@
     <ion-card-header>
       <ion-card-title>My Resumes</ion-card-title>
     </ion-card-header>
-    <ion-item *ngFor="let resume of (resumes | async)" [routerLink]="['/resume', resume.id]">
+    <ion-item *ngFor="let resume of (resumes | async)">
       <ion-grid>
         <ion-row>
-          {{ resume.title }}
+          <ion-col size="10">
+            {{ resume.title }}
+          </ion-col>
+          <ion-col size="2" [routerLink]="['/resume', resume.id]">
+            <ion-button>
+              <ion-icon slot="icon-only" name="create"></ion-icon>
+            </ion-button>
+          </ion-col>
         </ion-row>
       </ion-grid>
-      <ion-icon name="create" item-right></ion-icon>
     </ion-item>
   </ion-card>
 
