--- a/src/app/resumestab/resumestab.page.html
+++ b/src/app/resumestab/resumestab.page.html
@@ -1,9 +1,23 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>resumestab</ion-title>
+  <ion-toolbar color="primary">
+    <ion-title>My Resumes</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-item *ngFor="let resume of (resumes | async)">
+    <ion-grid>
+      <ion-row>
+        <ion-col size="10">
+          {{ resume.title }}
+        </ion-col>
+        <ion-col size="2" [routerLink]="['/resume', resume.id]">
+          <ion-button>
+            <ion-icon slot="icon-only" name="create"></ion-icon>
+          </ion-button>
+        </ion-col>
+      </ion-row>
+    </ion-grid>
+  </ion-item>
 
 </ion-content>
