--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -3,7 +3,7 @@
   <ion-tab-bar slot="bottom">
     <ion-tab-button tab="home">
       <ion-icon name="home"></ion-icon>
-      <ion-label>Home</ion-label>
+      <ion-label>Home Page</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab1">
@@ -18,7 +18,7 @@
 
     <ion-tab-button tab="resumestab">
       <ion-icon name="bookmark"></ion-icon>
-      <ion-label>My Resumes</ion-label>
+      <ion-label>Resumes</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
