Changed permissions and changed name to japanese-skill in ionic.config

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,9 +1,13 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>Home Page</ion-title>
+    <ion-title>JapaneseSkill</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
-  <h1>Hello, World!</h1>
+  <h1>Welcome!</h1>
+  <p>
+    JapaneseSkill is an app for learning Japanese. There is focus for simple, beginner conversational, Japanese,
+    as well as JLPT preparation materials. Enjoy!
+  </p>
 </ion-content>
