--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,5 +5,9 @@
 </ion-header>
 
 <ion-content padding>
-  <h2>This page will show some HOT jobs!</h2>
+  <h1>Welcome!</h1>
+  <p>
+    JapaneseSkill is an app for learning Japanese. There is focus for simple, beginner conversational, Japanese,
+    as well as JLPT preparation materials. Enjoy!
+  </p>
 </ion-content>
