--- a/src/app/pages/first-with-tabs/first-with-tabs.page.html
+++ b/src/app/pages/first-with-tabs/first-with-tabs.page.html
@@ -1,9 +1,15 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>firstWithTabs</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-tabs>
+  <ion-tab-bar slot="bottom">
 
-<ion-content>
+    <ion-tab-button tab="tab1">
+      <ion-icon name="sunny"></ion-icon>
+      <ion-label>Home</ion-label>
+    </ion-tab-button>
 
-</ion-content>
+    <ion-tab-button tab="tab2">
+      <ion-icon name="moon"></ion-icon>
+      <ion-label>Tab 2</ion-label>
+    </ion-tab-button>
+
+  </ion-tab-bar>
+</ion-tabs>
