--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,9 +1,14 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>tab1</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>Home Page</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content padding>
+  <ion-button expand="block" routerLink="/menu/first/tabs/tab1/details" routerDirection="forward">
+    Details forward
+  </ion-button>
 </ion-content>
