--- a/src/app/pages/createdeck/createdeck.page.html
+++ b/src/app/pages/createdeck/createdeck.page.html
@@ -9,11 +9,28 @@
 
 <ion-content padding>
 
-  <ion-item>
-    <ion-label position="stacked">Deck Title:</ion-label>
-    <ion-textarea placeholder="Enter title..." [(ngModel)]=deck.title></ion-textarea>
-  </ion-item>
-</ion-content>
+  <ion-list lines="none">
+
+    <form [formGroup]="slideOneForm">
+
+      <ion-item>
+        <ion-label position="floating">First Name</ion-label>
+        <ion-input formControlName="firstName" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Last Name</ion-label>
+        <ion-input formControlName="lastName" type="text"></ion-input>
+      </ion-item>
+
+      <ion-item>
+        <ion-label position="floating">Age</ion-label>
+        <ion-input formControlName="age" type="number"></ion-input>
+      </ion-item>
+
+    </form>
+
+  </ion-list>
 
 <ion-footer>
   <ion-row no-padding text-center>
