--- a/src/app/pages/showdeck/showdeck.page.html
+++ b/src/app/pages/showdeck/showdeck.page.html
@@ -1,6 +1,9 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>showdeck</ion-title>
+  <ion-toolbar color="primary">
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref=""></ion-back-button>
+    </ion-buttons>
+    <ion-title>Deck Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
