--- a/src/app/pages/first-with-tabs/first-with-tabs.page.html
+++ b/src/app/pages/first-with-tabs/first-with-tabs.page.html
@@ -2,12 +2,12 @@
   <ion-tab-bar slot="bottom">
 
     <ion-tab-button tab="tab1">
-      <ion-icon name="sunny"></ion-icon>
+      <ion-icon name="albums"></ion-icon>
       <ion-label>Home</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="moon"></ion-icon>
+      <ion-icon name="star-outline"></ion-icon>
       <ion-label>Tab 2</ion-label>
     </ion-tab-button>
 
