Fixed routing to direct to the showdeck page

--- a/src/app/pages/showdeck/showdeck.page.html
+++ b/src/app/pages/showdeck/showdeck.page.html
@@ -8,5 +8,12 @@
 </ion-header>
 
 <ion-content>
-
+  <ion-item>
+    <ion-label position="stacked">Title</ion-label>
+    {{ deck.title }}
+  </ion-item>
+  <ion-item>
+    <ion-label position="stacked">Level</ion-label>
+    {{ deck.level }}
+  </ion-item>
 </ion-content>
