--- a/src/app/pages/showdeck/showdeck.page.html
+++ b/src/app/pages/showdeck/showdeck.page.html
@@ -4,6 +4,11 @@
       <ion-back-button defaultHref=""></ion-back-button>
     </ion-buttons>
     <ion-title>Deck Details</ion-title>
+    <ion-buttons slot="end">
+      <ion-button (click)="presentAlertConfirm()">
+        <ion-icon name="trash"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
