Added a Facebook login function

--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -5,5 +5,15 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-button expand="block" routerLink="/menu/first">Login</ion-button>
+  <ion-button expand="block" routerLink="/menu/first">Go To Tabs Page</ion-button>
+  <ion-button expand="block" (click)="loginWithFB()">Login</ion-button>
+
+  <ion-card *ngIf="userData">
+    <ion-card-header>{{ userData.username }}</ion-card-header>
+    <img [src]="userData.picture">
+    <ion-card-content>
+      <p>Email: {{ userData.email }}</p>
+      <p>First Name: {{ userData.first_name }}</p>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
